Fix code-editor overflow of x-axis bug

--- a/frontend/src/css/Collaboration.css
+++ b/frontend/src/css/Collaboration.css
@@ -33,5 +33,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 50%;
   padding: 5px 5px 5px 2.5px;
 }
